[ADD] 2級英名 item description

--- a/ColorName.html
+++ b/ColorName.html
@@ -630,6 +630,12 @@
                 <p class="mansell">10RP&nbsp;7/8</p>
                 <p class="item-name">ローズピンク</p>
                 <p class="item-ruby">rose pink</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい紫みの赤</p>
+                    <p class="item-description">
+                        紫みを帯びたピンク色のバラの花にちなむ名。
+                    </p>
+                </div>
             </div>
             <div id="winered" class="item third english-name">
                 <div class="item-color"></div>
@@ -642,12 +648,24 @@
                 <p class="mansell">10RP&nbsp;2/2.5</p>
                 <p class="item-name">バーガンディー</p>
                 <p class="item-ruby">burgundy</p>
+                <div class="additional-part">
+                    <p class="systematic">ごく暗い紫みの赤</p>
+                    <p class="item-description">
+                        フランスのブルゴーニュ産の赤ワインのような色を表す色名。
+                    </p>
+                </div>
             </div>
             <div id="oldrose" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">1R&nbsp;6/6.5</p>
                 <p class="item-name">オールドローズ</p>
                 <p class="item-ruby">old rose</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい赤</p>
+                    <p class="item-description">
+                        イギリスのビクトリア朝でもてはやされた流行色の色名。英語の色名にオールドという形容がつくと、古い、昔の、という連想から、くすんだ色、グレイッシュな色ということになる。
+                    </p>
+                </div>
             </div>
             <div id="bordeaux" class="item third english-name">
                 <div class="item-color"></div>
@@ -666,6 +684,12 @@
                 <p class="mansell">4R&nbsp;5/14</p>
                 <p class="item-name">ポピーレッド</p>
                 <p class="item-ruby">poppy red</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな赤</p>
+                    <p class="item-description">
+                        ポピーは日本語ではヒナゲシのこと。イギリスでは麦畑に自生するありふれた花らしい。
+                    </p>
+                </div>
             </div>
             <div id="carmine" class="item third english-name">
                 <div class="item-color"></div>
@@ -678,6 +702,12 @@
                 <p class="mansell">5R&nbsp;2.5/6</p>
                 <p class="item-name">マルーン</p>
                 <p class="item-ruby">maroon</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い赤</p>
+                    <p class="item-description">
+                        スペイン産の大粒の栗の名前がイタリア語でマローネ、フランス語でマロン、さらに英語でマルーンという色名になった。
+                    </p>
+                </div>
             </div>
             <div id="vermilion" class="item third english-name">
                 <div class="item-color"></div>
@@ -696,6 +726,12 @@
                 <p class="mansell">7.5R&nbsp;4.5/8</p>
                 <p class="item-name">テラコッタ</p>
                 <p class="item-ruby">terracotta</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄みの赤</p>
+                    <p class="item-description">
+                        イタリア語で「焼いた土」の意味だが、素焼きの陶器などの色のこともいう。
+                    </p>
+                </div>
             </div>
             <div id="salmonpink" class="item third english-name">
                 <div class="item-color"></div>
@@ -708,6 +744,12 @@
                 <p class="mansell">10R&nbsp;4.5/7.5</p>
                 <p class="item-name">バーントシェンナ</p>
                 <p class="item-ruby">burnt sienna</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄赤</p>
+                    <p class="item-description">
+                        イタリアのトスカナ地方（美しい土の採掘場）の中心都市がシエナで、そこから名づけられたシェンナ土を焼いて赤みのある褐色絵の具にしたものをバーントシェンナと呼び、その絵の具のような色をいう名。
+                    </p>
+                </div>
             </div>
             <div id="chocolate" class="item third english-name">
                 <div class="item-color"></div>
@@ -727,24 +769,48 @@
                 <p class="mansell">4YR&nbsp;5/9</p>
                 <p class="item-name">ローシェンナ</p>
                 <p class="item-ruby">raw sienna</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい黄赤</p>
+                    <p class="item-description">
+                        イタリアのトスカナ地方でとれた土から作られた、フレスコ画には重要な絵の具で、その色名がローシェンナ。ローは「そのまま」という意味。
+                    </p>
+                </div>
             </div>
             <div id="tan" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">6YR&nbsp;5/6</p>
                 <p class="item-name">タン</p>
                 <p class="item-ruby">tan</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄赤</p>
+                    <p class="item-description">
+                        カシ、ナラなどの街皮から採取した汁はタンニン酸を含み、獣皮をなめすのに使用された。そのなめし革がタン革であり、その色がタンと呼ばれた。
+                    </p>
+                </div>
             </div>
             <div id="ecrubeige" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">7.5YR&nbsp;8.5/4</p>
                 <p class="item-name">エクルベイジュ</p>
                 <p class="item-ruby">ecru beige</p>
+                <div class="additional-part">
+                    <p class="systematic">うすい赤みの黄</p>
+                    <p class="item-description">
+                        フランス語。エクルは「さらしていない」「生の」という意味。ベイジュも未加工の羊毛のような色のことで、二つあわせても生成りの色ということ。それが19世紀にファッションカラーとなり、流行色の色名になった。
+                    </p>
+                </div>
             </div>
             <div id="goldenyellow" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">7.5YR&nbsp;7/10</p>
                 <p class="item-name">ゴールデンイエロー</p>
                 <p class="item-ruby">golden yellow</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい赤みの黄</p>
+                    <p class="item-description">
+                        ルネッサンス初期の絵画では聖人を表す光輪は金粉を使った絵の具で描かれていたが、盛期には黄金の輝きに黄の絵の具が使われた。
+                    </p>
+                </div>
             </div>
             <div id="marigold" class="item third english-name">
                 <div class="item-color"></div>
@@ -757,6 +823,12 @@
                 <p class="mansell">8YR&nbsp;5.5/6.5</p>
                 <p class="item-name">アンバー</p>
                 <p class="item-ruby">amber</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ赤みの黄</p>
+                    <p class="item-description">
+                        アンバー（amber）は琥珀のこと。この色が琥珀そのものからつくられたわけではなく、琥珀のような色のことをいう。
+                    </p>
+                </div>
             </div>
             <div id="beige" class="item third english-name">
                 <div class="item-color"></div>
@@ -769,6 +841,12 @@
                 <p class="mansell">10YR&nbsp;3/3</p>
                 <p class="item-name">バーントアンバー</p>
                 <p class="item-ruby">burnt umber</p>
+                <div class="additional-part">
+                    <p class="systematic">ごく暗い赤みの黄</p>
+                    <p class="item-description">
+                        アンバー（umber）はイタリアのウンブリア地方の英語名といわれる。ウンブリアの土を焼いて暗褐色にした絵の具の色で、画家のパレットには欠かせないものだった。
+                    </p>
+                </div>
             </div>
             <div id="sepia" class="item third english-name">
                 <div class="item-color"></div>
@@ -793,12 +871,24 @@
                 <p class="mansell">2.5Y&nbsp;4/6</p>
                 <p class="item-name">ローアンバー</p>
                 <p class="item-ruby">raw umber</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い黄</p>
+                    <p class="item-description">
+                        アンバー（umber）は絵の具の原料に使われるイタリアのウンブリア地方の土のこと。ローは「そのまま」という意味。特に英米では家の壁の色によく用いられる。
+                    </p>
+                </div>
             </div>
             <div id="naplesyellow" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">2.5Y&nbsp;8/7.5</p>
                 <p class="item-name">ネープルスイエロー</p>
                 <p class="item-ruby">naples yellow</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい黄</p>
+                    <p class="item-description">
+                        「ナポリの黄」という意味。ネープルスはイタリアのナポリの英語名。この黄の絵の具は、ナポリ湾岸のヴェスヴィアス火山の鉱物からつくられたと信じられていた。
+                    </p>
+                </div>
             </div>
             <div id="creamyellow" class="item third english-name">
                 <div class="item-color"></div>
@@ -811,6 +901,12 @@
                 <p class="mansell">5Y&nbsp;8.5/14</p>
                 <p class="item-name">ジョンブリアン</p>
                 <p class="item-ruby">jaune brillant</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな黄</p>
+                    <p class="item-description">
+                        フランス語で「輝かしい黄色」を意味する色名。
+                    </p>
+                </div>
             </div>
             <div id="canaryyellow" class="item third english-name">
                 <div class="item-color"></div>
@@ -842,30 +938,60 @@
                 <p class="mansell">4GY&nbsp;8/10</p>
                 <p class="item-name">シャトルーズグリーン</p>
                 <p class="item-ruby">chartreuse green</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい黄緑</p>
+                    <p class="item-description">
+                        フランスのシャトルーズ修道院でつくられたリキュールが色名の起源。
+                    </p>
+                </div>
             </div>
             <div id="leafgreen" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">5GY&nbsp;6/7</p>
                 <p class="item-name">リーフグリーン</p>
                 <p class="item-ruby">leaf green</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい黄緑</p>
+                    <p class="item-description">
+                        リーフは葉のことで、木の葉の緑という意味の名。草色のグラスグリーンとともに自然の黄緑色を表す。
+                    </p>
+                </div>
             </div>
             <div id="grassgreen" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">5GY&nbsp;5/5</p>
                 <p class="item-name">グラスグリーン</p>
                 <p class="item-ruby">grass green</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄緑</p>
+                    <p class="item-description">
+                        英語の色名としては最古のものの一つ。8世紀以前にはすでに知られていたらしい。グラスは草の意味。英語のグラスグリーンは牧草の色らしい。
+                    </p>
+                </div>
             </div>
             <div id="applegreen" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">10GY&nbsp;8/5</p>
                 <p class="item-name">アップルグリーン</p>
                 <p class="item-ruby">apple green</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい黄みの緑</p>
+                    <p class="item-description">
+                        日本でリンゴといえば赤だが、英語のアップルはグリーンの色名になっている。
+                    </p>
+                </div>
             </div>
             <div id="mintgreen" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">2.5G&nbsp;7.5/8</p>
                 <p class="item-name">ミントグリーン</p>
                 <p class="item-ruby">mint green</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい緑</p>
+                    <p class="item-description">
+                        ミントとはハッカのこと。この色はハッカの油からつくった酒の色といわれている。
+                    </p>
+                </div>
             </div>
             <div id="cobaltgreen" class="item third english-name">
                 <div class="item-color"></div>
@@ -884,12 +1010,24 @@
                 <p class="mansell">4G&nbsp;4.5/9</p>
                 <p class="item-name">マラカイトグリーン</p>
                 <p class="item-ruby">malachite green</p>
+                <div class="additional-part">
+                    <p class="systematic">こい緑</p>
+                    <p class="item-description">
+                        マラカイト、日本語で孔雀石と呼ばれる鉱石からつくられた緑色の色名。エジプト人が目を守るまじないにこの緑色を目のまわりに塗ったのがアイラインの始まりだという。
+                    </p>
+                </div>
             </div>
             <div id="bottlegreen" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">5G&nbsp;2.5/3</p>
                 <p class="item-name">ボトルグリーン</p>
                 <p class="item-ruby">bottle green</p>
+                <div class="additional-part">
+                    <p class="systematic">ごく暗い緑</p>
+                    <p class="item-description">
+                        酒の輸送に使われるのが樽からガラスのボトルとコルクに変わったのは17世紀になってから。そのボトルには緑のガラスが使用された。
+                    </p>
+                </div>
             </div>
             <div id="viridian" class="item third english-name">
                 <div class="item-color"></div>
@@ -903,12 +1041,24 @@
                 <p class="mansell">7.5BG&nbsp;4.5/9</p>
                 <p class="item-name">ピーコックグリーン</p>
                 <p class="item-ruby">peacock green</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな青緑</p>
+                    <p class="item-description">
+                        孔雀の羽の緑色のような色の色名。
+                    </p>
+                </div>
             </div>
             <div id="nileblue" class="item second english-name">
                 <div class="item-color"></div>
                 <p class="mansell">10BG&nbsp;5.5/5</p>
                 <p class="item-name">ナイルブルー</p>
                 <p class="item-ruby">nile blue</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ青緑</p>
+                    <p class="item-description">
+                        ナイル川の名前がつく色名が登場した。ナイルブルーが先で、その後、ナイルグリーンが色名になった。
+                    </p>
+                </div>
             </div>
             <div id="turquoiseblue" class="item third english-name">
                 <div class="item-color"></div>
@@ -939,6 +1089,12 @@
                 <p class="mansell">9B&nbsp;4.5/9</p>
                 <p class="item-name">セルリアンブルー</p>
                 <p class="item-ruby">cerulean blue</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな青</p>
+                    <p class="item-description">
+                        19世紀に錫酸コバルト化合物からつくられた美しい青の絵の具が工場生産されるようになり、その色にセルリアンブルーの色名が与えられた。
+                    </p>
+                </div>
             </div>
             <div id="babyblue" class="item third english-name">
                 <div class="item-color"></div>
@@ -951,6 +1107,12 @@
                 <p class="mansell">1PB&nbsp;5/4.5</p>
                 <p class="item-name">サックスブルー</p>
                 <p class="item-ruby">saxe blue</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ青</p>
+                    <p class="item-description">
+                        サックスはドイツ東部の州であるザクセンの英語名。「サクソン人の青」という意味。主に繊維製品のための色名となった。
+                    </p>
+                </div>
             </div>
             <div id="cobaltblue" class="item third english-name">
                 <div class="item-color"></div>
@@ -963,6 +1125,12 @@
                 <p class="mansell">5PB&nbsp;1.5/2</p>
                 <p class="item-name">ミッドナイトブルー</p>
                 <p class="item-ruby">midnight blue</p>
+                <div class="additional-part">
+                    <p class="systematic">ごく暗い紫みの青</p>
+                    <p class="item-description">
+                        真夜中の青という意味の、暗い紺色を表す商業的な色名として成功したものの一つ。
+                    </p>
+                </div>
             </div>
             <div id="navyblue" class="item third english-name">
                 <div class="item-color"></div>
@@ -982,6 +1150,12 @@
                 <p class="mansell">10PB&nbsp;5/12</p>
                 <p class="item-name">ウィスタリア</p>
                 <p class="item-ruby">wistaria</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな青紫</p>
+                    <p class="item-description">
+                        ウイスタリアは藤の英語名。19世紀末にこの色の化学染料ができたために出現した色名である。
+                    </p>
+                </div>
             </div>
             <div id="violet" class="item third english-name">
                 <div class="item-color"></div>
@@ -1006,6 +1180,12 @@
                 <p class="mansell">6P&nbsp;7/6</p>
                 <p class="item-name">ライラック</p>
                 <p class="item-ruby">lilac</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい紫</p>
+                    <p class="item-description">
+                        ライラックの花の色からとられた薄紫の色名。
+                    </p>
+                </div>
             </div>
             <div id="purple" class="item third english-name">
                 <div class="item-color"></div>
@@ -1031,6 +1211,12 @@
                 <p class="mansell">2.5PB&nbsp;3.5/0.5</p>
                 <p class="item-name">スレートグレイ</p>
                 <p class="item-ruby">slate grey</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い灰色</p>
+                    <p class="item-description">
+                        西洋諸国で屋根の瓦として使われる、粘板岩の薄板がスレート。
+                    </p>
+                </div>
             </div>
             <div id="charcoalgray" class="item third english-name">
                 <div class="item-color"></div>
@@ -1049,6 +1235,12 @@
                 <p class="mansell">N&nbsp;1</p>
                 <p class="item-name">ランプブラック</p>
                 <p class="item-ruby">lamp black</p>
+                <div class="additional-part">
+                    <p class="systematic">黒</p>
+                    <p class="item-description">
+                        ランプブラックはランプの油を燃焼させてできた媒からとられた黒。炭素の黒のカーボンブラックの同類である。
+                    </p>
+                </div>
             </div>
         </div>
 
