[ADD] 1級和名 item description

--- a/ColorName.html
+++ b/ColorName.html
@@ -103,6 +103,12 @@
                 <p class="mansell">10RP&nbsp;9/2.5</p>
                 <p class="item-name">桜色</p>
                 <p class="item-ruby">さくらいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">ごくうすい紫みの赤</p>
+                    <p class="item-description">
+                        満開の山桜の花のような淡いピンクの色名。平安時代を通じて最も愛好された色名であり、「古今和歌集」にも登場している。
+                    </p>
+                </div>
             </div>
             <div id="karakurenai" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -121,12 +127,24 @@
                 <p class="mansell">2.5R&nbsp;7/11</p>
                 <p class="item-name">珊瑚色</p>
                 <p class="item-ruby">さんごいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい赤</p>
+                    <p class="item-description">
+                        珊瑚にはさまざまな色があるが、装飾品などで特に珍重されたのがピンク系とされる。
+                    </p>
+                </div>
             </div>
             <div id="koubai" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">2.5R&nbsp;6.5/7.5</p>
                 <p class="item-name">紅梅色</p>
                 <p class="item-ruby">こうばいいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい赤</p>
+                    <p class="item-description">
+                        紅梅の花のようなピンクの色名。平安時代には冬から春にかけての色として愛好された。清少納言は「すさまじき」色とし、見飽きのする色とも述べている。
+                    </p>
+                </div>
             </div>
             <div id="suou" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -145,12 +163,24 @@
                 <p class="mansell">4R&nbsp;3.5/11</p>
                 <p class="item-name">茜色</p>
                 <p class="item-ruby">あかねいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">こい赤</p>
+                    <p class="item-description">
+                        茜は日本の山野にも自生するつる草。その根を原料とする染料で染めた濃い赤を表す色名。茜色に照りはえる、という意味の枕詞「あかねさす」は、「万葉集」にも用いられた。日本で最古の植物染料の一つ。
+                    </p>
+                </div>
             </div>
             <div id="shu" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">6R&nbsp;5.5/14</p>
                 <p class="item-name">朱色</p>
                 <p class="item-ruby">しゅいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな黄みの赤</p>
+                    <p class="item-description">
+                        硫化水銀を原料とする銀朱の色を表す色名。人造朱の銀朱の色は、東洋で印鑑の朱肉の色として知られる。
+                    </p>
+                </div>
             </div>
             <div id="tobi" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -205,6 +235,12 @@
                 <p class="mansell">10R&nbsp;4/7</p>
                 <p class="item-name">煉瓦色</p>
                 <p class="item-ruby">れんがいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い黄赤</p>
+                    <p class="item-description">
+                        英語の色名でも「赤れんが色」を意味するブリックレッドが古い。日本人がこの色名になじむようになったのは明治の文明開化以降のこと。
+                    </p>
+                </div>
             </div>
             <!-- Yellow type -->
             <div id="hiwada" class="item second japanese-name">
@@ -224,6 +260,12 @@
                 <p class="mansell">2YR&nbsp;3.5/4</p>
                 <p class="item-name">栗色</p>
                 <p class="item-ruby">くりいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い灰みの黄赤</p>
+                    <p class="item-description">
+                        栗の実の表皮のような色のこと。「栗皮色」という別名（中世から近世）や「落栗（おちぐり）」という名称（平安時代）もある。
+                    </p>
+                </div>
             </div>
             <div id="taisya" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -266,12 +308,24 @@
                 <p class="mansell">10YR&nbsp;7.5/13</p>
                 <p class="item-name">山吹色</p>
                 <p class="item-ruby">やまぶきいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな赤みの黄</p>
+                    <p class="item-description">
+                        山吹の花のような鮮やかな黄を表す色名。平安文学では黄の色相を代表する色名で、後には黄金の大判、小判の形容になった。
+                    </p>
+                </div>
             </div>
             <div id="oudo" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">10YR&nbsp;6/7.5</p>
                 <p class="item-name">黄土色</p>
                 <p class="item-ruby">おうどいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ赤みの黄</p>
+                    <p class="item-description">
+                        日本画の黄土は水酸化鉄を含む泥士からつくられた絵の具。英語の色名ではイエローオーカーになる。
+                    </p>
+                </div>
             </div>
             <div id="kutiba" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -302,6 +356,12 @@
                 <p class="mansell">3Y&nbsp;7/6</p>
                 <p class="item-name">芥子色</p>
                 <p class="item-ruby">からしいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい黄</p>
+                    <p class="item-description">
+                        おでんなどでよく使われる練りからしの色。英語ではマスタードやマスタードイエロー
+                    </p>
+                </div>
             </div>
             <div id="kariyasu" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -357,18 +417,36 @@
                 <p class="mansell">1GY&nbsp;4.5/3.5</p>
                 <p class="item-name">鶯色</p>
                 <p class="item-ruby">うぐいすいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄緑</p>
+                    <p class="item-description">
+                        鶯の羽毛のような暗い黄緑色の色名。
+                    </p>
+                </div>
             </div>
             <div id="moegi" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">4GY&nbsp;6.5/9</p>
                 <p class="item-name">萌黄</p>
                 <p class="item-ruby">もえぎ</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい黄緑</p>
+                    <p class="item-description">
+                        春に芽吹く若葉のような黄緑色を表す伝統的な色名。萌葱とも書く。平安時代以来、新鮮さ、若々しさを象徴する黄緑色の代表的な色名だった。
+                    </p>
+                </div>
             </div>
             <div id="matuba" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">7.5GY&nbsp;5/4</p>
                 <p class="item-name">松葉色</p>
                 <p class="item-ruby">まつばいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">くすんだ黄緑</p>
+                    <p class="item-description">
+                        松の葉のような色のこと。常緑掛である松は一年を通して緑が絶えないことから、日本では長寿の象徴と考えられている。正月の松飾りに用いられるように、縁起のよいもの
+                    </p>
+                </div>
             </div>
             <div id="tokiwa" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -399,12 +477,24 @@
                 <p class="mansell">6G&nbsp;6/7.5</p>
                 <p class="item-name">若竹色</p>
                 <p class="item-ruby">わかたけいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">つよい緑</p>
+                    <p class="item-description">
+                        竹の幹の緑を表す色名の中でも若い竹の色を表現している。成長した竹の色は青竹色、老竹色（おいたけいろ）はくすんだ緑色である。
+                    </p>
+                </div>
             </div>
             <div id="seizi" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">7.5G&nbsp;6.5/4</p>
                 <p class="item-name">青磁色</p>
                 <p class="item-ruby">せいじいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">やわらかい青みの緑</p>
+                    <p class="item-description">
+                        中国の唐の時代につくられた青磁は、平安時代に日本にも知られて「秘色〔ひそく）」と呼ばれていた。
+                    </p>
+                </div>
             </div>
             <div id="tetu" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -436,6 +526,12 @@
                 <p class="mansell">2.5B&nbsp;5/8</p>
                 <p class="item-name">浅葱色</p>
                 <p class="item-ruby">あさぎいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな緑みの青</p>
+                    <p class="item-description">
+                        染色の色名としては青と緑の中間色相を表す。
+                    </p>
+                </div>
             </div>
             <div id="nando" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -466,12 +562,24 @@
                 <p class="mansell">9B&nbsp;7.5/5.5</p>
                 <p class="item-name">空色</p>
                 <p class="item-ruby">そらいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい青</p>
+                    <p class="item-description">
+                        晴天の青空の色を表す色名。英語ではスカイブルー。
+                    </p>
+                </div>
             </div>
             <div id="ai" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">2PB&nbsp;3/5</p>
                 <p class="item-name">藍色</p>
                 <p class="item-ruby">あいいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">暗い青</p>
+                    <p class="item-description">
+                        藍染めの起源は神話、伝説の時代にさかのぼるほど古く、藍は人類最古の植物染料といわれる。日本ではタデアイ（蓼藍）が用いられてきた。インディゴで通用する。
+                    </p>
+                </div>
             </div>
             <div id="hanada" class="item second japanese-name">
                 <div class="item-color"></div>
@@ -490,24 +598,48 @@
                 <p class="mansell">6PB&nbsp;3.5/11</p>
                 <p class="item-name">瑠璃色</p>
                 <p class="item-ruby">るりいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">こい紫みの青</p>
+                    <p class="item-description">
+                        古代インドや中国で珍重された、青い宝石の瑠璃のような色を表す。
+                    </p>
+                </div>
             </div>
             <div id="kakitubata" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">7PB&nbsp;4/10</p>
                 <p class="item-name">杜若色</p>
                 <p class="item-ruby">かきつばたいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな紫みの青</p>
+                    <p class="item-description">
+                        アヤメ科の植物であるカキツバタの花のような色のこと。この花の汁を擦りつけて布を染めていたことから、古くは「書きつけ花」と呼ばれていた。
+                    </p>
+                </div>
             </div>
             <div id="gunjou" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">7.5PB&nbsp;3.5/11</p>
                 <p class="item-name">群青色</p>
                 <p class="item-ruby">ぐんじょういろ</p>
+                <div class="additional-part">
+                    <p class="systematic">こい紫みの青</p>
+                    <p class="item-description">
+                        桔梗の花のような青紫色の伝統的な色名。昔は「きかういろ」とも呼ばれた。
+                    </p>
+                </div>
             </div>
             <div id="kikyou" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">9PB&nbsp;3.5/13</p>
                 <p class="item-name">桔梗色</p>
                 <p class="item-ruby">ききょういろ</p>
+                <div class="additional-part">
+                    <p class="systematic">こい青紫</p>
+                    <p class="item-description">
+                        青の集まりを意味する伝統的な色名。群青は藍銅鉱（らんどうこう）という鉱物を原料とする、日本画の代表的な青色絵の具の色名。
+                    </p>
+                </div>
             </div>
             <!-- Purple type -->
             <div id="huzi" class="item second japanese-name">
@@ -551,18 +683,36 @@
                 <p class="mansell">7.5P&nbsp;2.5/2.5</p>
                 <p class="item-name">茄子紺</p>
                 <p class="item-ruby">なすこん</p>
+                <div class="additional-part">
+                    <p class="systematic">ごく暗い紫</p>
+                    <p class="item-description">
+                        英語ではエッグプラント。
+                    </p>
+                </div>
             </div>
             <div id="ayame" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">10P&nbsp;6/10</p>
                 <p class="item-name">菖蒲色</p>
                 <p class="item-ruby">あやめいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">明るい赤みの紫</p>
+                    <p class="item-description">
+                        アヤメ科のハナアヤメの花の色。アヤメの名前の由来は美しい文目があること。
+                    </p>
+                </div>
             </div>
             <div id="botan" class="item third japanese-name">
                 <div class="item-color"></div>
                 <p class="mansell">3RP&nbsp;5/14</p>
                 <p class="item-name">牡丹色</p>
                 <p class="item-ruby">ぼたんいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">あざやかな赤紫</p>
+                    <p class="item-description">
+                        紫ががかった紅色の花のような色。マゼンタのような華やかな赤紫色。
+                    </p>
+                </div>
             </div>
             <!-- Achromatic type -->
             <div id="kinari" class="item third japanese-name">
@@ -570,6 +720,12 @@
                 <p class="mansell">10YR&nbsp;9/1</p>
                 <p class="item-name">生成り色</p>
                 <p class="item-ruby">きなりいろ</p>
+                <div class="additional-part">
+                    <p class="systematic">赤みを帯びた黄みの白</p>
+                    <p class="item-description">
+                        何も加工しない生地のままの繊維の色を表す新しい色名。
+                    </p>
+                </div>
             </div>
             <div id="ginnezu" class="item second japanese-name">
                 <div class="item-color"></div>
